src/tests/code/fail/fail_accessing_non_existant_function.u
entrypoint: ~()->(i64{1})
{
	bogus(42);
}
